--- a/demo/HDSF_interpretML.ipynb
+++ b/demo/HDSF_interpretML.ipynb
@@ -211,8 +211,14 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "datascience",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
